--- a/src/template.html
+++ b/src/template.html
@@ -6,13 +6,30 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Deserve</title>
-</head>
-<body>
-<noscript>
-    You need to enable JavaScript to run this app.
-</noscript>
 
-<div id="app"></div>
+    <script src="https://skyflow-js.s3-us-west-2.amazonaws.com/skyflow.js"></script>
+    <style>
+      .base {
+        color: #3f51b5;
+      }
+      .complete {
+        color: #4caf50;
+      }
+      .empty {
+      }
+      .focus {
+        color: #000;
+      }
+      .invalid {
+        color: #f44336;
+      }
+    </style>
+  </head>
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
 
-</body>
+    <div id="app"></div>
+  </body>
 </html>
