added 4 iframes in summary page instead of multiple iframes

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
 
     <title>Deserve</title>
 
-    <script src="https://skyflow-js.s3-us-west-2.amazonaws.com/skyflow.js"></script>
+    <script src="http://localhost:3040/skyflow.js"></script>
     <style>
       .base {
         color: #3f51b5;
