--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="https://images.ctfassets.net/5vb3k5tov1cb/1dGXw2f1ZyQe2IuNrfCzJN/b643688fd844104c20b1d32a43d478d7/Favicon-blue.png" />
 
-    <title>Deserve</title>
+    <title>Skyflow - Credit Agency Sample App</title>
 
     <script src="https://skyflow-js.s3-us-west-2.amazonaws.com/skyflow.js"></script>
     <style>
