DX-51,DX-52/Add confirmation page, add review modal and integrate api

--- a/src/template.html
+++ b/src/template.html
@@ -33,6 +33,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
 
-    <div id="app"></div>
+    <div id="app" style="height: 100vh;"></div>
   </body>
 </html>
