Add reveal component, approve and decline option, pending screen and css fixes

--- a/src/template.html
+++ b/src/template.html
@@ -33,6 +33,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
 
-    <div id="app" style="height: 100vh;"></div>
+    <div id="app"></div>
   </body>
 </html>
