--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/png" href=<%="/" + require("./skyflow-logo-new.png")%> />
     <title>Skyflow - Credit Agency Sample App</title>
 
     <script src="https://skyflow-js.s3-us-west-2.amazonaws.com/skyflow.js"></script>
