--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,8 @@
     <link rel="shortcut icon" type="image/png" href=<%="/" + require("./skyflow-logo-new.png")%> />
     <title>Skyflow - Credit Agency Sample App</title>
 
-    <script src="https://skyflow-js.s3-us-west-2.amazonaws.com/skyflow.js"></script>
+    <!-- <script src="https://skyflow-js.s3-us-west-2.amazonaws.com/skyflow.js"></script> -->
+    <script src="http://localhost:3040/skyflow.js"></script>
     <style>
       .base {
         color: #3f51b5;
